erDiagram
    direction LR

CLIENTE ||--o{ CONTRATACAO        : "realiza"
CONTRATACAO ||--o{ ITEM_CONTRATACAO : "inclui"
ITEM_CONTRATACAO }o--|| DESTINO        : "aponta para"
DESTINO }o--|| CATEGORIA          : "classificado em"

CLIENTE {
    int     id               PK
    date    dataCadastro
    varchar nomeCliente
    char    situacaoCliente
}

CATEGORIA {
    int     id               PK
    varchar nome            
    char    situacaoCategoria
    date    dataCategoria
}
 
DESTINO {
    int     id               PK
    varchar local           
    double  preco
    varchar imagemUrl
    int     categoria_id     FK
}

CONTRATACAO {
    int     id               PK
    varchar nomeCliente
    date    data
    date    periodoInicio
    date    periodoFim
    int     quantidadePessoas
}

ITEM_CONTRATACAO {
    int     id               PK
    int     idContratacao    FK
    int     idDestino        FK
    double  precoUnitario
}
